--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AGENDA</title>
-    
+
 
     <!--Links-->
-   <link rel="stylesheet" href="style.css">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"> 
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 </head>
 
@@ -19,8 +20,8 @@
     <div class="container">
         <!--NAVEGACION-->
         <div class="head">
-            <h1 class="main-title">AGENDA</h1>
-                <nav class="navegation">
+            <a href="/AgendaV2/index.html"><h1 class="main-title">AGENDA</h1></a>
+            <nav class="navegation">
 
                 <ul class="">
                     <li><a href="">INICIO</a></li>
@@ -28,30 +29,30 @@
                     <li>
                         <div class="search-container">
 
-                                <input type="search" placeholder="Buscar una Tarea">
-                                <button type="submit"><i class="fas fa-search"></i></button>
+                            <input type="search" placeholder="Buscar una Tarea">
+                            <a href=""><button type="submit"><i class="fas fa-search"></i></button></a>
                         </div>
-                        
+
                     </li>
-                    <li><a href="">Iniciar Sesion o <br>   
-                        Crear Cuenta</a>
+                    <li><a href="">Iniciar Sesion o <br>
+                            Crear Cuenta</a>
                     </li>
                 </ul>
-                 </nav>
+            </nav>
         </div>
 
         <div class="article">
-            <h2 class="create-task"><a href="">TAREA NUEVA</a></h2>
+            <h2 class="create-task"><a href="/AgendaV2/task.html">TAREA NUEVA</a></h2>
             <h2 class="subtitle">TAREAS RECIENTES</h2>
             <div class="task-one">
                 <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur iure quam itaque ipsa culpa
                     dignissimos blanditiis amet praesentium labore, sed enim officiis fugiat odit beatae doloribus vero
                     tempora consequatur debitis.</h3>
-                    <a href="">
-                        <div  class="task-hover">
-                           <button>Leer Más</button>
-                        </div>
-                    </a>
+                <a href="">
+                    <div class="task-hover">
+                        <button>Leer Más</button>
+                    </div>
+                </a>
             </div>
             <div class="task-two">
                 <h3>
@@ -63,28 +64,31 @@
                     tempora consequatur debitis.
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur iure quam itaque ipsa culpa
                     dignissimos blanditiis amet praesentium labore, sed enim officiis fugiat odit beatae doloribus vero
-                    tempora consequatur debitis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur iure quam itaque ipsa culpa
+                    tempora consequatur debitis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+                    iure quam itaque ipsa culpa
                     dignissimos blanditiis amet praesentium labore, sed enim officiis fugiat odit beatae doloribus vero
-                    tempora consequatur debitis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur iure quam itaque ipsa culpa
+                    tempora consequatur debitis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+                    iure quam itaque ipsa culpa
                     dignissimos blanditiis amet praesentium labore, sed enim officiis fugiat odit beatae doloribus vero
-                    tempora consequatur debitis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur iure quam itaque ipsa culpa
+                    tempora consequatur debitis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+                    iure quam itaque ipsa culpa
                     dignissimos blanditiis amet praesentium labore, sed enim officiis fugiat odit beatae doloribus vero
                     tempora consequatur debitis.
                 </h3> <a href="">
-                <div  class="task-hover">
-                   <button>Leer Más</button>
-                </div>
-            </a>
+                    <div class="task-hover">
+                        <button>Leer Más</button>
+                    </div>
+                </a>
             </div>
             <div class="task-three">
                 <h3>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur iure quam itaque ipsa culpa
-                 dignissimos blanditiis amet praesentium labore, sed enim officiis fugiat odit beatae doloribus vero
-                tempora consequatur debitis.
+                    dignissimos blanditiis amet praesentium labore, sed enim officiis fugiat odit beatae doloribus vero
+                    tempora consequatur debitis.
                 </h3>
                 <a href="">
-                    <div  class="task-hover">
-                       <button>Leer Más</button>
+                    <div class="task-hover">
+                        <button>Leer Más</button>
                     </div>
                 </a>
             </div>
